# mcp-server

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/mcp_server/: __init__.py  api.py  compat_rest.py  hrms_client.py  main.py  mcp_runtime.py  models.py  tool_registery.py  tool_registry.py  tools.py
src/mcp_server/attendance/: client.py  client_additions.py  router.py  router_additions.py  tools.py  tools_additions.py  tools_helpers.py
src/mcp_server/feedback/: client.py  client_additions.py  models.py  router.py  router_additions.py  tools.py  tools_additions.py
src/mcp_server/leaves/: api.py  client.py  models.py  router.py  tools.py  tools_additions.py
src/mcp_server/misc/: tools.py
src/mcp_server/miscellaneous/: client.py  models.py  router.py  tools.py
src/mcp_server/referrals/: tools.py
src/mcp_server/team_management/: client.py  models.py  router.py  tools.py
src/mcp_server/tickets/: client.py  models.py  router.py  tools.py  tools_additions.py
src/mcp_server/tools/: __init__.py
src/mcp_server/tools/attendance/: tools.py  tools_helpers.py
src/mcp_server/tools/feedback/: tools.py
src/mcp_server/tools/leaves/: models.py  router.py  tools.py
src/mcp_server/tools/miscellaneous/: tools.py
src/xmcp/: main.py
tests/: conftest.py  test_apply_comp_off.py  test_apply_leave.py  test_attendance.py  test_compat.py  test_feedback.py  test_health.py  test_holidays.py  test_leaves.py  test_miscellaneous.py  test_team_management.py  test_tickets.py  test_tools.py
(+3 files in other folders)
