[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "0.1.0"
description = "XAgent HR MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "mcp>=1.13.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build]
sources = ["src"]
