# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xmcp-hrms"
version = "0.1.1"  # bump since 0.1.0 tag already exists
description = "XAgent HR MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.20",
  "mcp>=1.13.0",
  "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "requests-mock",
  "httpx>=0.27",
  "build",
]

[tool.hatch.build]
sources = ["src"]

# ✅ tell Hatch exactly which package to include in the wheel
[tool.hatch.build.targets.wheel]
packages = ["src/xmcp"]

# (optional, belt-and-braces) keep tests out of sdists if you bring them back later
[tool.hatch.build.targets.sdist]
exclude = ["/tests"]
